// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisputedOrderNoticeHandler renders regular dispute notice 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-0>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-0>* {
  min-width: 0;
}

.emotion-2 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-4>*+*:not( marquee ) {
  margin-left: calc(4px * 4);
}

.emotion-4>* {
  min-width: 0;
}

<div>
  <div
    class="wcpay-inline-notice wcpay-inline-warning-notice components-notice is-warning"
  >
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex emotion-0 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-inline-notice__content wcpay-inline-warning-notice__content emotion-2 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <strong>
            This order has a payment dispute for $10.00 for the reason 'Transaction unauthorized'. 
          </strong>
           
          Please respond before Oct 28, 2023.
          <div
            class="components-flex wcpay-inline-notice__content__actions emotion-4 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Flex"
          >
            <button
              class="components-button wcpay-inline-notice__action"
              type="button"
            >
              Respond now
            </button>
          </div>
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
  </div>
</div>
`;

exports[`DisputedOrderNoticeHandler renders urgent dispute notice 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-0>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-0>* {
  min-width: 0;
}

.emotion-2 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-4>*+*:not( marquee ) {
  margin-left: calc(4px * 4);
}

.emotion-4>* {
  min-width: 0;
}

<div>
  <div
    class="wcpay-inline-notice wcpay-inline-error-notice components-notice is-error"
  >
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex emotion-0 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-inline-notice__content wcpay-inline-error-notice__content emotion-2 emotion-1"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <strong>
            Please resolve the dispute on this order of $10.00 labeled 'Transaction unauthorized' by Oct 28, 2023.
          </strong>
           
          (Last day today)
          <div
            class="components-flex wcpay-inline-notice__content__actions emotion-4 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Flex"
          >
            <button
              class="components-button wcpay-inline-notice__action"
              type="button"
            >
              Respond today
            </button>
          </div>
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
  </div>
</div>
`;
